Add model loading settings and idle management to configuration
- Introduced environment variables for model preloading and idle timeout in .env.example
- Updated setup documentation to include new model loading settings
- Enhanced ModelRegistry to manage idle timeout and unload models when inactive

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 # HuggingFace API token (optional but recommended for faster downloads)
 HF_TOKEN=your_token_here
+
+# Model loading settings
+MODEL_PRELOAD=true              # Load model on startup (true/false)
+MODEL_IDLE_TIMEOUT=300          # Seconds before unloading idle model (0 = never)
+DEFAULT_MODEL=z-image-turbo     # Model to preload/use by default
