feat: Add UI for image generation and enhance backend configurations
- Added a new HTML file (ui.html) for the image generation interface with controls for prompt input, aspect ratio selection, and advanced settings.
- Implemented CORS middleware in FastAPI to allow cross-origin requests for the UI.
- Updated Docker Compose configuration to include a new environment variable for PyTorch CUDA allocation.
- Modified the GenerateRequest schema to allow a CFG scale of 0 for turbo models.
- Created a shell script (ui.sh) to launch the UI in a specified browser.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - HF_HOME=/root/.cache/huggingface
       - TRANSFORMERS_CACHE=/root/.cache/huggingface
+      - PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True
     deploy:
       resources:
         reservations:
