feat: Implement actor management and TTS generation features
- Added database configuration and initialization in config.py and db.py.
- Created Actor and ActorAudioFile data models for managing actors and their audio files.
- Implemented CRUD operations for actors, including creating, retrieving, updating, and deleting actors and their audio files.
- Developed API routers for actor management and text-to-speech (TTS) generation.
- Integrated VRAM management for efficient GPU resource handling across image and audio models.
- Enhanced main application to support new features and initialize the database.
- Updated health check and model listing endpoints to include audio models.
- Added streaming capabilities for TTS generation to improve latency for long texts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       - "4201:4201"
     volumes:
       - huggingface-cache:/root/.cache/huggingface
+      - ./data:/app/data
     env_file:
       - .env
     environment:
@@ -34,6 +35,7 @@ services:
     volumes:
       - huggingface-cache:/root/.cache/huggingface
       - ./src:/app/src:ro
+      - ./data:/app/data
     env_file:
       - .env
     environment:
