--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ dependencies = [
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "diffusers @ git+https://github.com/huggingface/diffusers.git",
+    # TTS dependencies
+    "coqui-tts>=0.22.0",
+    "torchaudio>=2.0.0",
+    "torchcodec>=0.1.0",
+    "python-multipart>=0.0.6",
+    "aiosqlite>=0.19.0",
 ]
 
 [project.optional-dependencies]
