feat: Add TTS history persistence and streaming with auto text splitting
- Add TTS history API endpoints (GET/DELETE /tts/history)
- Persist history to SQLite database
- Fix streaming: auto-split long text to avoid XTTS 400 token limit
- Add delete audio file endpoint for actors
- Add streaming toggle in UI (disables split_sentences)
- Save form settings to localStorage
- Update .gitignore to exclude audio files and data directory

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,13 @@ htmlcov/
 
 # Generated images
 images/
+
+# Audio files
+*.wav
+*.mp3
+*.flac
+*.ogg
+*.m4a
+
+# Data directory (actors, history, database)
+data/
