feat: Add YouTube audio extraction and vocal separation using Demucs
- Updated pyproject.toml to include yt-dlp and demucs dependencies.
- Implemented DemucsModel for vocal separation with VRAM management.
- Created youtube.py for downloading audio from YouTube and processing it.
- Enhanced main.py to register the Demucs model with the VRAM manager.
- Added API endpoint to create actors from YouTube URLs, including optional vocal separation and silence trimming.
- Updated UI to support audio source selection between file upload and YouTube URL.
- Implemented validation for YouTube URLs and added controls for max duration and vocal separation options.
- Enhanced actor and history management with search functionality and pagination.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "torchcodec>=0.1.0",
     "python-multipart>=0.0.6",
     "aiosqlite>=0.19.0",
+    # YouTube voice extraction
+    "yt-dlp>=2024.0.0",
+    "demucs>=4.0.0",
 ]
 
 [project.optional-dependencies]
