Add Maya TTS model and voice description functionality
- Introduced Maya TTS model with support for natural language voice descriptions and emotion tags.
- Created schemas for Maya TTS requests and emotion tags.
- Implemented database models and functions for managing Maya voice presets (actors).
- Added API endpoints for generating speech using Maya TTS, managing voice presets, and listing available emotion tags.
- Updated VRAM manager to include memory requirements for Maya model.
- Enhanced UI to support model selection, voice description input, and emotion tag insertion for Maya TTS.
- Implemented client-side logic for managing Maya actors and integrating with the new TTS model.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dependencies = [
     # YouTube voice extraction
     "yt-dlp>=2024.0.0",
     "demucs>=4.0.0",
+    # Maya TTS
+    "snac",
+    "scipy>=1.10.0",
 ]
 
 [project.optional-dependencies]
