--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,11 @@ dependencies = [
     # Maya TTS
     "snac",
     "scipy>=1.10.0",
+    # Video generation
+    "opencv-python>=4.8.0",
+    "imageio>=2.31.0",
+    "imageio-ffmpeg>=0.4.8",
+    "peft>=0.13.0",  # Required for LoRA loading in diffusers
 ]
 
 [project.optional-dependencies]
