--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     # TTS dependencies
     "coqui-tts>=0.22.0",
     "torchaudio>=2.0.0",
+    "torchvision>=0.15.0",  # Required for vision models
     "torchcodec>=0.1.0",
     "python-multipart>=0.0.6",
     "aiosqlite>=0.19.0",
