--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "peft>=0.13.0",  # Required for LoRA loading in diffusers
     "bitsandbytes>=0.41.0",  # Required for 4-bit quantized models (img2img)
     "rembg[cpu]>=2.0.50",  # AI background removal for pixel art (CPU to avoid VRAM conflicts)
+    "gguf>=0.6.0",  # Required for GGUF quantized models (qwen-image-2512)
 ]
 
 [project.optional-dependencies]
