--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ dependencies = [
     "bitsandbytes>=0.41.0",  # Required for 4-bit quantized models (img2img)
     "rembg[cpu]>=2.0.50",  # AI background removal for pixel art (CPU to avoid VRAM conflicts)
     "gguf>=0.6.0",  # Required for GGUF quantized models (qwen-image-2512)
+    # Music generation (ace-step installed separately in Dockerfile with --no-deps
+    # to avoid diffusers version conflict)
+    "soundfile>=0.12.0",
 ]
 
 [project.optional-dependencies]
