feat: Update ACE-Step model to version 1.5 with improved performance and adjust API documentation for new model variants

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,8 @@ dependencies = [
     "bitsandbytes>=0.41.0",  # Required for 4-bit quantized models (img2img)
     "rembg[cpu]>=2.0.50",  # AI background removal for pixel art (CPU to avoid VRAM conflicts)
     "gguf>=0.6.0",  # Required for GGUF quantized models (qwen-image-2512)
-    # Music generation (ace-step itself installed in Dockerfile with --no-deps
-    # to avoid diffusers version conflict; its runtime deps listed here)
+    # Music generation (ACE-Step 1.5 installed in Dockerfile with --no-deps;
+    # its runtime deps listed here)
     "soundfile>=0.12.0",
     "loguru>=0.7.0",
     "pypinyin>=0.50.0",
@@ -46,6 +46,7 @@ dependencies = [
     "cutlet",
     "fugashi[unidic-lite]",
     "datasets>=3.0.0",
+    "num2words>=0.5.0",
 ]
 
 [project.optional-dependencies]
